[package]
name = "b64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
clap = { version = "4.5.3", features = ["derive"] }
chacha20poly1305 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
rpassword = "7.3"


[profile.release]
lto = true
opt-level = 'z'
strip = "symbols"
# panic = 'abort'
